Fix notice display problems on mobile

--- a/stylus/modules/notice.styl
+++ b/stylus/modules/notice.styl
@@ -2,9 +2,9 @@
     animation: fadein 0.5s;
     background-color: #eee;
 	box-sizing: border-box;
-	height: 40px;
+	min-height: 40px;
 	line-height: 40px;
-	padding-left: 15px;
+	padding: 0 15px;
 	width: 100%;
 	z-index: 999;
 
